[gd_scene load_steps=9 format=2]

[ext_resource path="res://tryouts/material_blue.tres" type="Material" id=1]
[ext_resource path="res://meshes/Material.material" type="Material" id=2]
[ext_resource path="res://tryouts/material_red.tres" type="Material" id=3]
[ext_resource path="res://tryouts/material_green.tres" type="Material" id=4]
[ext_resource path="res://tryouts/grab_3d.gd" type="Script" id=5]
[ext_resource path="res://assets/maujoe.camera_control/scripts/camera_control.gd" type="Script" id=6]

[sub_resource type="ArrayMesh" id=1]
resource_name = "Cube"
surfaces/0 = {
"aabb": AABB( -1.12613, -0.330926, -0.324727, 2.56413, 0.6481, 0.6481 ),
"array_data": PoolByteArray( 186, 181, 95, 63, 192, 54, 197, 189, 135, 217, 190, 61, 0, 138, 46, 0, 0, 210, 138, 127, 200, 55, 219, 34, 32, 37, 144, 191, 141, 143, 8, 190, 177, 212, 101, 186, 0, 138, 46, 0, 0, 210, 138, 127, 86, 56, 245, 59, 186, 181, 95, 63, 141, 143, 8, 190, 172, 209, 101, 186, 0, 138, 46, 0, 0, 210, 138, 127, 86, 56, 219, 34, 32, 37, 144, 191, 218, 163, 236, 61, 175, 211, 101, 186, 0, 115, 51, 0, 233, 51, 143, 127, 64, 48, 55, 35, 178, 181, 95, 63, 119, 52, 153, 61, 88, 99, 184, 61, 0, 115, 51, 0, 233, 51, 143, 127, 251, 45, 227, 59, 185, 181, 95, 63, 218, 163, 236, 61, 182, 205, 101, 186, 0, 115, 51, 0, 233, 51, 143, 127, 64, 48, 245, 59, 186, 181, 95, 63, 175, 236, 202, 189, 15, 87, 184, 189, 132, 234, 248, 0, 17, 139, 46, 127, 107, 53, 53, 59, 104, 177, 104, 63, 41, 111, 169, 190, 233, 111, 49, 186, 132, 234, 248, 0, 17, 139, 46, 127, 155, 55, 55, 59, 186, 181, 95, 63, 141, 143, 8, 190, 172, 209, 101, 186, 132, 234, 248, 0, 17, 139, 46, 127, 253, 53, 236, 58, 178, 181, 95, 63, 119, 52, 153, 61, 88, 99, 184, 61, 0, 47, 117, 0, 0, 117, 209, 127, 251, 45, 227, 59, 41, 37, 144, 191, 192, 236, 17, 188, 213, 21, 253, 61, 0, 47, 117, 0, 0, 117, 209, 127, 158, 41, 53, 29, 181, 181, 95, 63, 192, 236, 17, 188, 213, 21, 253, 61, 0, 47, 117, 0, 0, 117, 209, 127, 158, 41, 227, 59, 32, 37, 144, 191, 192, 236, 17, 188, 39, 212, 101, 186, 129, 0, 0, 0, 0, 138, 46, 127, 164, 50, 174, 52, 32, 37, 144, 191, 175, 162, 150, 61, 96, 96, 200, 189, 129, 0, 0, 0, 0, 138, 46, 127, 170, 48, 43, 53, 32, 37, 144, 191, 192, 236, 17, 188, 143, 86, 0, 190, 129, 0, 0, 0, 0, 138, 46, 127, 214, 49, 159, 53, 186, 181, 95, 63, 175, 236, 202, 189, 15, 87, 184, 189, 0, 210, 138, 0, 0, 118, 210, 127, 187, 56, 4, 35, 32, 37, 144, 191, 192, 236, 17, 188, 143, 86, 0, 190, 0, 210, 138, 0, 0, 118, 210, 127, 41, 57, 245, 59, 191, 181, 95, 63, 192, 236, 17, 188, 143, 86, 0, 190, 0, 210, 138, 0, 0, 118, 210, 127, 41, 57, 4, 35, 41, 37, 144, 191, 119, 52, 153, 61, 71, 99, 184, 61, 129, 0, 0, 0, 0, 138, 46, 127, 219, 49, 125, 51, 32, 37, 144, 191, 192, 236, 17, 188, 39, 212, 101, 186, 129, 0, 0, 0, 0, 138, 46, 127, 164, 50, 174, 52, 41, 37, 144, 191, 192, 236, 17, 188, 213, 21, 253, 61, 129, 0, 0, 0, 0, 138, 46, 127, 113, 51, 123, 51, 195, 181, 95, 63, 175, 162, 150, 61, 88, 96, 200, 189, 132, 21, 247, 0, 233, 140, 45, 127, 247, 51, 251, 58, 99, 177, 104, 63, 155, 100, 162, 62, 147, 101, 49, 186, 132, 21, 247, 0, 233, 140, 45, 127, 154, 48, 64, 58, 122, 177, 104, 63, 52, 209, 84, 62, 167, 156, 129, 190, 132, 21, 247, 0, 233, 140, 45, 127, 196, 48, 94, 59, 32, 37, 144, 191, 175, 162, 150, 61, 96, 96, 200, 189, 0, 116, 206, 0, 0, 206, 140, 127, 244, 59, 4, 35, 185, 181, 95, 63, 218, 163, 236, 61, 182, 205, 101, 186, 0, 116, 206, 0, 0, 206, 140, 127, 125, 59, 245, 59, 195, 181, 95, 63, 175, 162, 150, 61, 88, 96, 200, 189, 0, 116, 206, 0, 0, 206, 140, 127, 244, 59, 245, 59, 186, 181, 95, 63, 141, 143, 8, 190, 172, 209, 101, 186, 0, 138, 211, 0, 234, 44, 140, 127, 86, 56, 219, 34, 32, 37, 144, 191, 175, 236, 202, 189, 23, 87, 184, 189, 0, 138, 211, 0, 234, 44, 140, 127, 165, 56, 228, 59, 186, 181, 95, 63, 175, 236, 202, 189, 15, 87, 184, 189, 0, 138, 211, 0, 234, 44, 140, 127, 165, 56, 50, 29, 186, 181, 95, 63, 175, 236, 202, 189, 15, 87, 184, 189, 132, 248, 234, 0, 0, 138, 46, 127, 107, 53, 53, 59, 114, 177, 104, 63, 127, 81, 225, 187, 151, 66, 166, 190, 132, 248, 234, 0, 0, 138, 46, 127, 209, 51, 245, 59, 104, 177, 104, 63, 193, 122, 119, 190, 170, 88, 110, 190, 132, 248, 234, 0, 0, 138, 46, 127, 32, 54, 245, 59, 32, 37, 144, 191, 192, 54, 197, 189, 135, 217, 190, 61, 129, 0, 0, 0, 0, 138, 46, 127, 87, 52, 59, 52, 32, 37, 144, 191, 192, 236, 17, 188, 39, 212, 101, 186, 129, 0, 0, 0, 0, 138, 46, 127, 164, 50, 174, 52, 32, 37, 144, 191, 141, 143, 8, 190, 177, 212, 101, 186, 129, 0, 0, 0, 0, 138, 46, 127, 87, 52, 13, 53, 191, 181, 95, 63, 192, 236, 17, 188, 143, 86, 0, 190, 0, 40, 136, 0, 235, 118, 39, 127, 41, 57, 4, 35, 32, 37, 144, 191, 175, 162, 150, 61, 96, 96, 200, 189, 0, 40, 136, 0, 235, 118, 39, 127, 116, 57, 230, 59, 195, 181, 95, 63, 175, 162, 150, 61, 88, 96, 200, 189, 0, 40, 136, 0, 235, 118, 39, 127, 116, 57, 167, 30, 32, 37, 144, 191, 192, 236, 17, 188, 39, 212, 101, 186, 129, 0, 0, 0, 0, 138, 46, 127, 164, 50, 174, 52, 32, 37, 144, 191, 175, 236, 202, 189, 23, 87, 184, 189, 129, 0, 0, 0, 0, 138, 46, 127, 139, 51, 159, 53, 32, 37, 144, 191, 141, 143, 8, 190, 177, 212, 101, 186, 129, 0, 0, 0, 0, 138, 46, 127, 87, 52, 13, 53, 181, 181, 95, 63, 192, 236, 17, 188, 213, 21, 253, 61, 0, 215, 119, 0, 21, 118, 41, 127, 158, 41, 227, 59, 32, 37, 144, 191, 192, 54, 197, 189, 135, 217, 190, 61, 0, 215, 119, 0, 21, 118, 41, 127, 161, 29, 166, 34, 186, 181, 95, 63, 192, 54, 197, 189, 135, 217, 190, 61, 0, 215, 119, 0, 21, 118, 41, 127, 161, 29, 243, 59, 186, 181, 95, 63, 192, 54, 197, 189, 135, 217, 190, 61, 132, 234, 8, 0, 23, 140, 45, 127, 253, 53, 131, 58, 104, 177, 104, 63, 41, 111, 169, 190, 233, 111, 49, 186, 132, 234, 8, 0, 23, 140, 45, 127, 155, 55, 55, 59, 104, 177, 104, 63, 123, 11, 112, 190, 38, 28, 122, 62, 132, 234, 8, 0, 23, 140, 45, 127, 155, 55, 37, 58, 77, 177, 104, 63, 147, 41, 88, 62, 149, 178, 113, 62, 63, 41, 102, 0, 54, 142, 12, 127, 24, 51, 195, 56, 87, 177, 104, 63, 127, 81, 225, 187, 41, 145, 165, 62, 63, 41, 102, 0, 54, 142, 12, 127, 92, 53, 56, 57, 73, 16, 184, 63, 250, 170, 38, 188, 249, 59, 131, 186, 63, 41, 102, 0, 54, 142, 12, 127, 239, 54, 201, 53, 104, 177, 104, 63, 41, 111, 169, 190, 233, 111, 49, 186, 62, 153, 217, 0, 42, 237, 118, 127, 71, 58, 194, 57, 104, 177, 104, 63, 193, 122, 119, 190, 170, 88, 110, 190, 62, 153, 217, 0, 42, 237, 118, 127, 138, 57, 27, 58, 73, 16, 184, 63, 250, 170, 38, 188, 249, 59, 131, 186, 62, 153, 217, 0, 42, 237, 118, 127, 103, 59, 245, 59, 87, 177, 104, 63, 127, 81, 225, 187, 41, 145, 165, 62, 63, 220, 103, 0, 23, 144, 203, 127, 92, 53, 56, 57, 104, 177, 104, 63, 123, 11, 112, 190, 38, 28, 122, 62, 63, 220, 103, 0, 23, 144, 203, 127, 239, 54, 109, 57, 73, 16, 184, 63, 250, 170, 38, 188, 249, 59, 131, 186, 63, 220, 103, 0, 23, 144, 203, 127, 239, 54, 201, 53, 114, 177, 104, 63, 127, 81, 225, 187, 151, 66, 166, 190, 63, 34, 152, 0, 39, 137, 241, 127, 64, 58, 101, 54, 122, 177, 104, 63, 52, 209, 84, 62, 167, 156, 129, 190, 63, 34, 152, 0, 39, 137, 241, 127, 138, 57, 254, 54, 73, 16, 184, 63, 250, 170, 38, 188, 249, 59, 131, 186, 63, 34, 152, 0, 39, 137, 241, 127, 86, 59, 107, 57, 186, 181, 95, 63, 192, 54, 197, 189, 135, 217, 190, 61, 132, 249, 22, 0, 15, 139, 46, 127, 253, 53, 131, 58, 87, 177, 104, 63, 127, 81, 225, 187, 41, 145, 165, 62, 132, 249, 22, 0, 15, 139, 46, 127, 0, 54, 130, 57, 181, 181, 95, 63, 192, 236, 17, 188, 213, 21, 253, 61, 132, 249, 22, 0, 15, 139, 46, 127, 95, 53, 68, 58, 185, 181, 95, 63, 218, 163, 236, 61, 182, 205, 101, 186, 132, 21, 9, 0, 240, 139, 46, 127, 231, 51, 141, 58, 77, 177, 104, 63, 147, 41, 88, 62, 149, 178, 113, 62, 132, 21, 9, 0, 240, 139, 46, 127, 222, 51, 131, 57, 99, 177, 104, 63, 155, 100, 162, 62, 147, 101, 49, 186, 132, 21, 9, 0, 240, 139, 46, 127, 154, 48, 64, 58, 181, 181, 95, 63, 192, 236, 17, 188, 213, 21, 253, 61, 132, 8, 21, 0, 0, 138, 46, 127, 95, 53, 68, 58, 77, 177, 104, 63, 147, 41, 88, 62, 149, 178, 113, 62, 132, 8, 21, 0, 0, 138, 46, 127, 222, 51, 131, 57, 178, 181, 95, 63, 119, 52, 153, 61, 88, 99, 184, 61, 132, 8, 21, 0, 0, 138, 46, 127, 148, 52, 68, 58, 195, 181, 95, 63, 175, 162, 150, 61, 88, 96, 200, 189, 132, 7, 235, 0, 242, 139, 46, 127, 247, 51, 251, 58, 114, 177, 104, 63, 127, 81, 225, 187, 151, 66, 166, 190, 132, 7, 235, 0, 242, 139, 46, 127, 209, 51, 245, 59, 191, 181, 95, 63, 192, 236, 17, 188, 143, 86, 0, 190, 132, 7, 235, 0, 242, 139, 46, 127, 145, 52, 53, 59, 104, 177, 104, 63, 123, 11, 112, 190, 38, 28, 122, 62, 62, 154, 40, 0, 27, 59, 108, 127, 103, 59, 128, 57, 104, 177, 104, 63, 41, 111, 169, 190, 233, 111, 49, 186, 62, 154, 40, 0, 27, 59, 108, 127, 71, 58, 194, 57, 73, 16, 184, 63, 250, 170, 38, 188, 249, 59, 131, 186, 62, 154, 40, 0, 27, 59, 108, 127, 103, 59, 245, 59, 104, 177, 104, 63, 193, 122, 119, 190, 170, 88, 110, 190, 62, 216, 154, 0, 24, 146, 58, 127, 86, 59, 243, 53, 114, 177, 104, 63, 127, 81, 225, 187, 151, 66, 166, 190, 62, 216, 154, 0, 24, 146, 58, 127, 64, 58, 101, 54, 73, 16, 184, 63, 250, 170, 38, 188, 249, 59, 131, 186, 62, 216, 154, 0, 24, 146, 58, 127, 86, 59, 107, 57, 122, 177, 104, 63, 52, 209, 84, 62, 167, 156, 129, 190, 62, 101, 213, 0, 24, 36, 119, 127, 138, 57, 77, 53, 99, 177, 104, 63, 155, 100, 162, 62, 147, 101, 49, 186, 62, 101, 213, 0, 24, 36, 119, 127, 185, 58, 201, 53, 73, 16, 184, 63, 250, 170, 38, 188, 249, 59, 131, 186, 62, 101, 213, 0, 24, 36, 119, 127, 185, 58, 45, 43, 99, 177, 104, 63, 155, 100, 162, 62, 147, 101, 49, 186, 62, 100, 45, 0, 67, 181, 76, 127, 154, 48, 60, 56, 77, 177, 104, 63, 147, 41, 88, 62, 149, 178, 113, 62, 62, 100, 45, 0, 67, 181, 76, 127, 24, 51, 195, 56, 73, 16, 184, 63, 250, 170, 38, 188, 249, 59, 131, 186, 62, 100, 45, 0, 67, 181, 76, 127, 239, 54, 201, 53, 186, 181, 95, 63, 192, 54, 197, 189, 135, 217, 190, 61, 0, 138, 46, 0, 0, 210, 138, 127, 200, 55, 219, 34, 32, 37, 144, 191, 192, 54, 197, 189, 135, 217, 190, 61, 0, 138, 46, 0, 0, 210, 138, 127, 200, 55, 245, 59, 32, 37, 144, 191, 141, 143, 8, 190, 177, 212, 101, 186, 0, 138, 46, 0, 0, 210, 138, 127, 86, 56, 245, 59, 32, 37, 144, 191, 218, 163, 236, 61, 175, 211, 101, 186, 0, 115, 51, 0, 233, 51, 143, 127, 64, 48, 55, 35, 41, 37, 144, 191, 119, 52, 153, 61, 71, 99, 184, 61, 0, 115, 51, 0, 233, 51, 143, 127, 251, 45, 53, 29, 178, 181, 95, 63, 119, 52, 153, 61, 88, 99, 184, 61, 0, 115, 51, 0, 233, 51, 143, 127, 251, 45, 227, 59, 186, 181, 95, 63, 175, 236, 202, 189, 15, 87, 184, 189, 132, 234, 248, 0, 17, 139, 46, 127, 107, 53, 53, 59, 104, 177, 104, 63, 193, 122, 119, 190, 170, 88, 110, 190, 132, 234, 248, 0, 17, 139, 46, 127, 32, 54, 245, 59, 104, 177, 104, 63, 41, 111, 169, 190, 233, 111, 49, 186, 132, 234, 248, 0, 17, 139, 46, 127, 155, 55, 55, 59, 178, 181, 95, 63, 119, 52, 153, 61, 88, 99, 184, 61, 0, 47, 117, 0, 0, 117, 209, 127, 251, 45, 227, 59, 41, 37, 144, 191, 119, 52, 153, 61, 71, 99, 184, 61, 0, 47, 117, 0, 0, 117, 209, 127, 251, 45, 53, 29, 41, 37, 144, 191, 192, 236, 17, 188, 213, 21, 253, 61, 0, 47, 117, 0, 0, 117, 209, 127, 158, 41, 53, 29, 32, 37, 144, 191, 192, 236, 17, 188, 39, 212, 101, 186, 129, 0, 0, 0, 0, 138, 46, 127, 164, 50, 174, 52, 32, 37, 144, 191, 218, 163, 236, 61, 175, 211, 101, 186, 129, 0, 0, 0, 0, 138, 46, 127, 154, 48, 79, 52, 32, 37, 144, 191, 175, 162, 150, 61, 96, 96, 200, 189, 129, 0, 0, 0, 0, 138, 46, 127, 170, 48, 43, 53, 32, 37, 144, 191, 175, 236, 202, 189, 23, 87, 184, 189, 0, 210, 138, 0, 0, 118, 210, 127, 187, 56, 245, 59, 41, 37, 144, 191, 119, 52, 153, 61, 71, 99, 184, 61, 129, 0, 0, 0, 0, 138, 46, 127, 219, 49, 125, 51, 32, 37, 144, 191, 218, 163, 236, 61, 175, 211, 101, 186, 129, 0, 0, 0, 0, 138, 46, 127, 154, 48, 79, 52, 32, 37, 144, 191, 192, 236, 17, 188, 39, 212, 101, 186, 129, 0, 0, 0, 0, 138, 46, 127, 164, 50, 174, 52, 195, 181, 95, 63, 175, 162, 150, 61, 88, 96, 200, 189, 132, 21, 247, 0, 233, 140, 45, 127, 247, 51, 251, 58, 185, 181, 95, 63, 218, 163, 236, 61, 182, 205, 101, 186, 132, 21, 247, 0, 233, 140, 45, 127, 231, 51, 141, 58, 99, 177, 104, 63, 155, 100, 162, 62, 147, 101, 49, 186, 132, 21, 247, 0, 233, 140, 45, 127, 154, 48, 64, 58, 32, 37, 144, 191, 175, 162, 150, 61, 96, 96, 200, 189, 0, 116, 206, 0, 0, 206, 140, 127, 244, 59, 4, 35, 32, 37, 144, 191, 218, 163, 236, 61, 175, 211, 101, 186, 0, 116, 206, 0, 0, 206, 140, 127, 125, 59, 4, 35, 185, 181, 95, 63, 218, 163, 236, 61, 182, 205, 101, 186, 0, 116, 206, 0, 0, 206, 140, 127, 125, 59, 245, 59, 32, 37, 144, 191, 141, 143, 8, 190, 177, 212, 101, 186, 0, 138, 211, 0, 234, 44, 140, 127, 86, 56, 245, 59, 186, 181, 95, 63, 175, 236, 202, 189, 15, 87, 184, 189, 132, 248, 234, 0, 0, 138, 46, 127, 107, 53, 53, 59, 191, 181, 95, 63, 192, 236, 17, 188, 143, 86, 0, 190, 132, 248, 234, 0, 0, 138, 46, 127, 145, 52, 53, 59, 114, 177, 104, 63, 127, 81, 225, 187, 151, 66, 166, 190, 132, 248, 234, 0, 0, 138, 46, 127, 209, 51, 245, 59, 32, 37, 144, 191, 192, 54, 197, 189, 135, 217, 190, 61, 129, 0, 0, 0, 0, 138, 46, 127, 87, 52, 59, 52, 41, 37, 144, 191, 192, 236, 17, 188, 213, 21, 253, 61, 129, 0, 0, 0, 0, 138, 46, 127, 113, 51, 123, 51, 191, 181, 95, 63, 192, 236, 17, 188, 143, 86, 0, 190, 0, 40, 136, 0, 235, 118, 39, 127, 41, 57, 4, 35, 32, 37, 144, 191, 192, 236, 17, 188, 143, 86, 0, 190, 0, 40, 136, 0, 235, 118, 39, 127, 41, 57, 245, 59, 32, 37, 144, 191, 175, 162, 150, 61, 96, 96, 200, 189, 0, 40, 136, 0, 235, 118, 39, 127, 116, 57, 230, 59, 32, 37, 144, 191, 192, 236, 17, 188, 39, 212, 101, 186, 129, 0, 0, 0, 0, 138, 46, 127, 164, 50, 174, 52, 32, 37, 144, 191, 192, 236, 17, 188, 143, 86, 0, 190, 129, 0, 0, 0, 0, 138, 46, 127, 214, 49, 159, 53, 32, 37, 144, 191, 175, 236, 202, 189, 23, 87, 184, 189, 129, 0, 0, 0, 0, 138, 46, 127, 139, 51, 159, 53, 181, 181, 95, 63, 192, 236, 17, 188, 213, 21, 253, 61, 0, 215, 119, 0, 21, 118, 41, 127, 158, 41, 227, 59, 41, 37, 144, 191, 192, 236, 17, 188, 213, 21, 253, 61, 0, 215, 119, 0, 21, 118, 41, 127, 158, 41, 53, 29, 32, 37, 144, 191, 192, 54, 197, 189, 135, 217, 190, 61, 0, 215, 119, 0, 21, 118, 41, 127, 161, 29, 166, 34, 186, 181, 95, 63, 192, 54, 197, 189, 135, 217, 190, 61, 132, 234, 8, 0, 23, 140, 45, 127, 253, 53, 131, 58, 186, 181, 95, 63, 141, 143, 8, 190, 172, 209, 101, 186, 132, 234, 8, 0, 23, 140, 45, 127, 253, 53, 236, 58, 104, 177, 104, 63, 41, 111, 169, 190, 233, 111, 49, 186, 132, 234, 8, 0, 23, 140, 45, 127, 155, 55, 55, 59, 186, 181, 95, 63, 192, 54, 197, 189, 135, 217, 190, 61, 132, 249, 22, 0, 15, 139, 46, 127, 253, 53, 131, 58, 104, 177, 104, 63, 123, 11, 112, 190, 38, 28, 122, 62, 132, 249, 22, 0, 15, 139, 46, 127, 155, 55, 37, 58, 87, 177, 104, 63, 127, 81, 225, 187, 41, 145, 165, 62, 132, 249, 22, 0, 15, 139, 46, 127, 0, 54, 130, 57, 185, 181, 95, 63, 218, 163, 236, 61, 182, 205, 101, 186, 132, 21, 9, 0, 240, 139, 46, 127, 231, 51, 141, 58, 178, 181, 95, 63, 119, 52, 153, 61, 88, 99, 184, 61, 132, 21, 9, 0, 240, 139, 46, 127, 148, 52, 68, 58, 77, 177, 104, 63, 147, 41, 88, 62, 149, 178, 113, 62, 132, 21, 9, 0, 240, 139, 46, 127, 222, 51, 131, 57, 181, 181, 95, 63, 192, 236, 17, 188, 213, 21, 253, 61, 132, 8, 21, 0, 0, 138, 46, 127, 95, 53, 68, 58, 87, 177, 104, 63, 127, 81, 225, 187, 41, 145, 165, 62, 132, 8, 21, 0, 0, 138, 46, 127, 0, 54, 130, 57, 77, 177, 104, 63, 147, 41, 88, 62, 149, 178, 113, 62, 132, 8, 21, 0, 0, 138, 46, 127, 222, 51, 131, 57, 195, 181, 95, 63, 175, 162, 150, 61, 88, 96, 200, 189, 132, 7, 235, 0, 242, 139, 46, 127, 247, 51, 251, 58, 122, 177, 104, 63, 52, 209, 84, 62, 167, 156, 129, 190, 132, 7, 235, 0, 242, 139, 46, 127, 196, 48, 94, 59, 114, 177, 104, 63, 127, 81, 225, 187, 151, 66, 166, 190, 132, 7, 235, 0, 242, 139, 46, 127, 209, 51, 245, 59 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 3, 0, 5, 0, 4, 0, 6, 0, 8, 0, 7, 0, 9, 0, 11, 0, 10, 0, 12, 0, 14, 0, 13, 0, 15, 0, 17, 0, 16, 0, 18, 0, 20, 0, 19, 0, 21, 0, 23, 0, 22, 0, 24, 0, 26, 0, 25, 0, 27, 0, 29, 0, 28, 0, 30, 0, 32, 0, 31, 0, 33, 0, 35, 0, 34, 0, 36, 0, 38, 0, 37, 0, 39, 0, 41, 0, 40, 0, 42, 0, 44, 0, 43, 0, 45, 0, 47, 0, 46, 0, 48, 0, 50, 0, 49, 0, 51, 0, 53, 0, 52, 0, 54, 0, 56, 0, 55, 0, 57, 0, 59, 0, 58, 0, 60, 0, 62, 0, 61, 0, 63, 0, 65, 0, 64, 0, 66, 0, 68, 0, 67, 0, 69, 0, 71, 0, 70, 0, 72, 0, 74, 0, 73, 0, 75, 0, 77, 0, 76, 0, 78, 0, 80, 0, 79, 0, 81, 0, 83, 0, 82, 0, 84, 0, 86, 0, 85, 0, 87, 0, 89, 0, 88, 0, 90, 0, 92, 0, 91, 0, 93, 0, 95, 0, 94, 0, 96, 0, 98, 0, 97, 0, 15, 0, 16, 0, 99, 0, 100, 0, 102, 0, 101, 0, 103, 0, 105, 0, 104, 0, 106, 0, 108, 0, 107, 0, 27, 0, 28, 0, 109, 0, 110, 0, 112, 0, 111, 0, 113, 0, 12, 0, 114, 0, 115, 0, 117, 0, 116, 0, 118, 0, 120, 0, 119, 0, 121, 0, 123, 0, 122, 0, 124, 0, 126, 0, 125, 0, 127, 0, 129, 0, 128, 0, 130, 0, 132, 0, 131, 0, 133, 0, 135, 0, 134, 0, 136, 0, 138, 0, 137, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 144,
"material": ExtResource( 2 ),
"name": "Material",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 139
}

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1.3, 0.16, 0.16 )

[node name="Grab3D" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.12468, 0, 0 )
script = ExtResource( 5 )

[node name="ArrowX" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00449354, 0, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 3 )

[node name="AreaX" type="Area" parent="ArrowX"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00449347, 0, 0 )

[node name="ShapeX" type="CollisionShape" parent="ArrowX/AreaX"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.160225, 0, 0 )
shape = SubResource( 2 )

[node name="ArrowZ" type="MeshInstance" parent="."]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, -2.15448, 0, 1.64838 )
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )

[node name="AreaZ" type="Area" parent="ArrowZ"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.011866, 0, 0.000621222 )

[node name="ShapeZ" type="CollisionShape" parent="ArrowZ/AreaZ"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.160225, 0, 0 )
shape = SubResource( 2 )

[node name="ArrowY" type="MeshInstance" parent="."]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, -2.13013, 2.13803, 0.000342131 )
mesh = SubResource( 1 )
material/0 = ExtResource( 4 )

[node name="AreaY" type="Area" parent="ArrowY"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0339563, -0.0148904, -0.00606108 )

[node name="ShapeY" type="CollisionShape" parent="ArrowY/AreaY"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.160225, 0, 0 )
shape = SubResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.843626, 0.536932, 0, -0.536932, 0.843626, -2.27726, 5.74836, 8.6539 )
script = ExtResource( 6 )
max_speed = Vector3( 5, 5, 5 )
[connection signal="input_event" from="ArrowX/AreaX" to="." method="_on_AreaX_input_event"]
[connection signal="mouse_entered" from="ArrowX/AreaX" to="." method="_on_AreaX_mouse_entered"]
[connection signal="mouse_exited" from="ArrowX/AreaX" to="." method="_on_AreaX_mouse_exited"]
[connection signal="input_event" from="ArrowZ/AreaZ" to="." method="_on_AreaZ_input_event"]
[connection signal="mouse_entered" from="ArrowZ/AreaZ" to="." method="_on_AreaZ_mouse_entered"]
[connection signal="mouse_exited" from="ArrowZ/AreaZ" to="." method="_on_AreaZ_mouse_exited"]
[connection signal="input_event" from="ArrowY/AreaY" to="." method="_on_AreaY_input_event"]
[connection signal="mouse_entered" from="ArrowY/AreaY" to="." method="_on_AreaY_mouse_entered"]
[connection signal="mouse_exited" from="ArrowY/AreaY" to="." method="_on_AreaY_mouse_exited"]
